Send email alerts on unhealthy servers and update Postman with example test

--- a/env.example
+++ b/env.example
@@ -1,1 +1,4 @@
 DB_URL=mysql+pymysql://username:password@localhost/db_name
+SMTP_USER=your.email@gmail.com
+SMTP_PASSWORD=abcd1234yourapppassword
+ALERT_EMAIL=alert.destination@example.com
